clang/test/BSC/Negative/SafeZone/implicit_conversion/implicit_conversion.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test that implicit numeric and enum conversions are FORBIDDEN
// Explicit casts are allowed, but implicit conversions remain forbidden

void test_implicit_numeric_conversion(void) {
  _Safe {
    long a = 2;
    // Implicit narrowing conversion is forbidden
    int b = a;  // expected-error{{implicit conversion from type 'long' to 'int' is forbidden in the safe zone; please use explicit cast or other means instead}}
  }

  _Safe {
    double x = 1.0;
    // Implicit high-precision to low-precision conversion is forbidden
    float y = x;  // expected-error{{implicit conversion from type 'double' to 'float' is forbidden in the safe zone; please use explicit cast or other means instead}}
  }

  _Safe {
    int val = 1;
    // Implicit char conversion is forbidden
    char c = val;  // expected-error{{implicit conversion from type 'int' to 'char' is forbidden in the safe zone; please use explicit cast or other means instead}}
  }

  _Safe {
    unsigned int a = 1;
    // Implicit signed/unsigned conversion is forbidden
    int b = a;  // expected-error{{implicit conversion from type 'unsigned int' to 'int' is forbidden in the safe zone; please use explicit cast or other means instead}}
  }
}

void test_implicit_enum_conversion(void) {
  enum E { ZERO, ONE, TWO };
  enum F { SUN, MON, TUES };

  _Safe {
    int a = 0;
    int cond = 1;
    // Implicit int to enum conversion is forbidden
    enum E num = a;  // expected-error{{conversion from type 'int' to 'enum E' is forbidden in the safe zone}}

    enum F day = SUN;
    // Implicit enum to enum conversion is an error in the safe zone
    num = day;  // expected-error{{implicit conversion from type 'enum F' to 'enum E' is forbidden in the safe zone; please use explicit cast or other means instead}}

    // Ternary with different enum types: still forbidden
    num = cond ? num : day;  // expected-error{{implicit conversion from type 'enum F' to 'enum E' is forbidden in the safe zone; please use explicit cast or other means instead}}

    // Implicit enum to int conversion is allowed
    a = num;  // ok
  }
}
